# selfcal-omr

./: .gitignore  CONTRIBUTING.md  Changelog.md  LICENSE.md  README.md  pyproject.toml
selfcal_omr/: ContourTools.py  __init__.py  constants.py  dbscan.py  detector.py  feature.py  game.py  helper.py  rowgroup.py
tests/: test_detector.py
